Fix validation problems in DatedServiceJourney export
Ref #708